# ha-emporia-ev

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml  release.yml  validate.yml
brands/: README.md
custom_components/emporia_ev/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  dynamic.py  entity.py  icons.json  manifest.json  number.py  optimistic.py  sensor.py  strings.json  switch.py
custom_components/emporia_ev/client/: __init__.py  auth.py  client.py  errors.py  models.py
docs/: emporia-cognito-facts.md  nas-smoke-test.md
scripts/: capture_emporia.py  probe_usage.py  scrub_fixtures.py
tests/integration/: conftest.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_dynamic.py  test_entity.py  test_init.py  test_number.py  test_optimistic.py  test_sensor.py  test_switch.py
