[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "emporia-ev"
version = "0.1.0"
description = "Home Assistant custom integration for the Emporia EV charger (async, cloud-polling)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Eunanibus" }]
dependencies = [
  # Runtime deps of the BUNDLED client library. NOT declared in manifest.json
  # (which stays requirements: []); HA already ships aiohttp + pycognito, and
  # the client is bundled, not PyPI-installed. Listed here only so the dev venv
  # and CI can import the client for tests.
  "aiohttp>=3.9",
  "pycognito>=2024.5",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-homeassistant-custom-component>=0.13",
  "aioresponses>=0.7",
  "homeassistant>=2024.8",
]

[project.urls]
"Homepage" = "https://github.com/Eunanibus/ha-emporia-ev"
"Issue Tracker" = "https://github.com/Eunanibus/ha-emporia-ev/issues"

[tool.setuptools]
packages = ["custom_components.emporia_ev", "custom_components.emporia_ev.client"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["custom_components", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "ASYNC", "RUF"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["custom_components"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
files = ["custom_components/emporia_ev"]

[[tool.mypy.overrides]]
module = ["homeassistant.*", "pytest_homeassistant_custom_component.*", "aioresponses.*", "pycognito.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
